:bug: possible white space fix

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -8,7 +8,6 @@
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
-
 .heroVideo {
   background-image: url("../img/bgvid-poster-00001.jpg");
   background-size: cover;
@@ -23,6 +22,7 @@
   left: -100%;
   object-fit: cover;
   z-index: -100;
+  inset: 0% !important;
 }
 
 .hero-container {
